# faster-whisper-model

./: README.md  main.py  pyproject.toml
