[tool.poetry]
name = "faster-whisper-model"
version = "0.1.0"
description = ""
authors = ["teq-quocbang <bangthong@teqnological.asia>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faster-whisper = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
